--- a/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part7_use_consumer_project.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part7_use_consumer_project.adoc
@@ -15,208 +15,120 @@
 [[part7_use_consumer_project]]
 = Part 7: Use a Consumer Project
 
-Learn the basics of writing and applying Gradle plugins.
+Learn how to set up a dummy `consumer` project to test your plugin.
 
 ****
 **In this section, you will:**
 
-- Add a custom task to the Plugin
-- Apply the Plugin to a subproject
-- Use the Plugin
+- Create a `consumer` Project
+- Test the Plugin
 ****
 
 [[part7_begin]]
 == Step 0. Before you Begin
 
-1. You initialized your Java app in <<part1_gradle_init_project.adoc#part1_begin,part 1>>.
-2. You understand the Gradle Build Lifecycle from <<part2_build_lifecycle.adoc#part2_begin,part 2>>.
-3. You added a subproject and a separate Build in <<part3_multi_project_builds#part3_begin, part3>>.
-4. You viewed a Settings file in <<part4_settings_file.adoc#part4_begin,part 4>>.
-5. You authored a Build script in <<part5_build_scripts.adoc#part5_begin,part 5>>.
-6. You authored a Task in <<part6_writing_tasks.adoc#part6_begin,part 6>>.
+1. You initialized your plugin in <<part1_gradle_init_plugin.adoc#part1_begin,part 1>>.
+2. You added an extension to your plugin in <<part2_add_extension.adoc#part2_begin,part 2>>.
+3. You created a custom task in <<part3_create_custom_task.adoc#part3_begin, part3>>.
+4. You wrote a unit test in <<part4_unit_test.adoc#part4_begin,part 4>>.
+5. You added a dataflow action to your plugin in <<part5_add_dataflow_action.adoc#part5_begin,part 2>>.
+6. You wrote a functional test in <<part6_functional_test.adoc#part6_begin,part 6>>.
 
-== Step 1. Develop the Plugin
+== Step 1. Create `consumer` Project
 
-Let's tie our custom `LicenseTask` to our plugin.
-
-Update the `LicensePlugin` with the code for the `Plugin` below (don't change anything else in the file):
+Create a sibling consumer build to try the plugin without publishing anything.
+Update your directory structure so it looks as follows:
 
 [.multi-language-sample]
 =====
-.gradle/license-plugin/plugin/src/main/kotlin/license/LicensePlugin.kt
-[source,kotlin]
+[source, kotlin]
 ----
-class LicensePlugin: Plugin<Project> {
-    override fun apply(project: Project) {
-        project.tasks.register("license", LicenseTask::class.java) { task ->
-            task.description = "add a license header to source code"   // Add description
-            task.group = "from license plugin"                         // Add group
-        }
-    }
-}
+.
+├── gradlew
+├── settings.gradle.kts
+├── plugin/
+└── consumer/   //<1>
+    ├── settings.gradle.kts
+    └── build.gradle.kts
 ----
+<1> Create a `consumer` project
 =====
 [.multi-language-sample]
 =====
-.gradle/license-plugin/plugin/src/main/kotlin/license/LicensePlugin.groovy
 [source, groovy]
 ----
-class LicensePlugin implements Plugin<Project> {
-    void apply(Project project) {
-        project.tasks.register("license", LicenseTask) { task ->
-            task.setDescription("add a license header to source code")  // Add description
-            task.setGroup("from license plugin")                        // Add group
-        }
+.
+├── gradlew
+├── settings.gradle
+├── plugin/
+└── consumer/   //<1>
+    ├── settings.gradle
+    └── build.gradle
+----
+<1> Create a `consumer` project
+=====
+
+== Step 2. Wire the `consumer` to include the `plugin`
+
+Wire the `consumer` to the plugin via `pluginManagement {}`
+
+In `consumer/settings.gradle.kts`, add the following code:
+
+[source,kotlin]
+----
+rootProject.name = "consumer"
+
+pluginManagement {
+includeBuild("../plugin")
+    repositories {
+        gradlePluginPortal()
     }
 }
 ----
-=====
 
-== Step 2. Add a license.txt file
+`includeBuild("../plugin")` makes the plugin from the plugin directory available by its ID without publishing.
 
-Add a file called `license.txt` to the root directory of the project and add the following text to it:
+== Step 3. Apply and configure the plugin in the `consumer`
 
-.license.txt
-[source,text]
-----
-/*
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-----
+In `consumer/build.gradle.kts`:
 
-== Step 3. Apply the Plugin
-
-Apply the plugin to the `app` subproject (if not done already):
-
-[.multi-language-sample]
-=====
-.app/build.gradle.kts
 [source,kotlin]
 ----
 plugins {
-    application
-    id("com.tutorial.license") // Apply custom plugin
+    id("org.example.slack") // your plugin ID from gradlePlugin { plugins { id = ... } }
 }
-----
-=====
-[.multi-language-sample]
-=====
-.app/build.gradle
-[source, groovy]
-----
-plugins {
-    id 'application'
-    id('com.tutorial.license') // Apply custom plugin
-}
-----
-=====
 
-Make sure the plugin is correctly applied by listing the available tasks in the `app` subproject:
+slack {
+    token.set(System.getenv("SLACK_TOKEN") ?: "dummy-token")
+    channel.set("#build-notifications")
+    message.set("Hello from consumer via composite build!")
+}
+----
+
+No version is needed, the plugin is resolved from the included build.
+
+== Step 4. Run the `consumer`
+
+From the `consumer` directory:
 
 [source,text]
 ----
-$ ./gradlew :app:tasks
-
-------------------------------------------------------------
-Tasks runnable from project ':app'
-------------------------------------------------------------
-
-...
-
-From license plugin tasks
--------------------------
-license - add a license header to source code
+./gradlew sendSlackMessage
 ----
 
-== Step 4. Run the custom Task
-
-Finally, it's time to run the new task.
-
-First, let's inspect some source code:
-
-.app/src/main/java/authoring/tutorial/App.java
-[source,java]
-----
-package authoring.tutorial;
-
-import com.gradle.CustomLib;
-
-public class App {
-    public String getGreeting() {
-        return "CustomLib identifier is: " + CustomLib.identifier;
-    }
-
-    public static void main(String[] args) {
-        System.out.println(new App().getGreeting());
-    }
-}
-----
-
-Next, let's run the task with `./gradlew :app:license`:
+You can also simply run:
 
 [source,text]
 ----
-$ ./gradlew :app:license
-
-> Task :license-plugin:plugin:compileKotlin UP-TO-DATE
-> Task :license-plugin:plugin:compileJava NO-SOURCE
-> Task :license-plugin:plugin:pluginDescriptors UP-TO-DATE
-> Task :license-plugin:plugin:processResources UP-TO-DATE
-> Task :license-plugin:plugin:classes UP-TO-DATE
-> Task :license-plugin:plugin:jar UP-TO-DATE
-
-> Configure project :app
-
-> Task :app:license
-
-BUILD SUCCESSFUL in 410ms
-5 actionable tasks: 1 executed, 4 up-to-date
+./gradlew build
 ----
 
-Now inspect the same source code, which should include a license header:
+And see the Slack message.
 
-.app/src/main/java/authoring/tutorial/App.java
-[source,java]
-----
-/*
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package authoring.tutorial;
+That’s it!
+You can now iterate on the plugin in `plugin/`, and immediately test it in `consumer/` with zero publishing friction.
 
-import com.gradle.CustomLib;
-
-public class App {
-    public String getGreeting() {
-        return "CustomLib identifier is: " + CustomLib.identifier;
-    }
-
-    public static void main(String[] args) {
-        System.out.println(new App().getGreeting());
-    }
-}
-----
-
-Congratulations, you have completed the tutorial!
+Let's take a look at another way to implement this plugin.
 
 [.text-right]
 **Next Step:** <<part8_add_build_listener.adoc#part8_add_build_listener,Add a Build Listener>> >>
