--- a/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part9_add_build_service.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/developing-plugins/tutorial/part9_add_build_service.adoc
@@ -12,8 +12,8 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-[[part6_writing_tasks]]
-= Part 6: Add a Build Service
+[[part9_add_build_service]]
+= Part 9: Add a Build Service
 
 Learn the basics of authoring Gradle tasks by creating a simple one in your Build script.
 
@@ -24,14 +24,17 @@ Learn the basics of authoring Gradle tasks by creating a simple one in your Buil
 - Add a Build Service to the Plugin
 ****
 
-[[part6_begin]]
+[[part9_begin]]
 == Step 0. Before you Begin
 
 1. You initialized your plugin in <<part1_gradle_init_plugin.adoc#part1_begin,part 1>>.
 2. You added an extension to your plugin in <<part2_add_extension.adoc#part2_begin,part 2>>.
 3. You created a custom task in <<part3_create_custom_task.adoc#part3_begin, part3>>.
-4. You added a build listener in <<part5_add_dataflow_action.adoc#part4_begin,part 4>>.
-5. You wrote a unit test in <<part4_unit_test.adoc#part5_begin,part 5>>.
+4. You wrote a unit test in <<part4_unit_test.adoc#part4_begin,part 4>>.
+5. You added a dataflow action to your plugin in <<part5_add_dataflow_action.adoc#part5_begin,part 2>>.
+6. You wrote a functional test in <<part6_functional_test.adoc#part6_begin,part 6>>.
+7. You used a dummy consumer project to consume your plugin in <<part7_use_consumer_project.adoc#part7_begin,part 7>>.
+8. You replaced the dataflow action with a build listener in <<part8_add_build_listener.adoc#part8_begin,part 8>>.
 
 == Step 1. Understanding Build Services
 
